[package]
name = "telegram-bot"
version = "0.1.0"
authors = ["Alexander <sasha.kudasov04@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.0", features = ["full"] }
tokio-compat-02 = "0.2.0"
telegram-bot = { git = "https://github.com/ayrat555/telegram-bot", branch = "ayrat555/api-fixes-10" }
futures = "0.3.16"
async-std = "1.9.0"
nertsal-commands = { git = "https://github.com/Nertsal/nertsal-commands" }
google-sheets4 = "2.0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
yup-oauth2 = "5.0"
hyper = "0.14"
hyper-rustls = "0.22"
